# open-tabs

./: .gitignore  .gitlint  .gitmessage  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  main.py  pyproject.toml
docs/: develop.md  fastapi_best_practices.md
docs/feature/: auth-database-design.md  email-auth-api-design.md
tabapi/: http_serve.py  scripts.py
tabapi/alembic/: env.py
tabapi/alembic/versions/: af8897561ac5_fix_verification_code_field_length_and_.py  f579960911db_add_auth_tables.py
tabapi/app/: routes.py  setup_app.py
tabapi/app/core/: config.py  logger.py  redis.py
tabapi/app/db/: base.py  deps.py  mixins.py  session.py
tabapi/app/modules/: __init__.py
tabapi/app/modules/auth/: __init__.py  config.py  constants.py  dependencies.py  enums.py  exceptions.py  models.py  router.py  schemas.py  service.py
tabapi/app/modules/system/: routes.py
tabs-ext/: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
tabs-ext/src/: manifest.ts  vite-env.d.ts
tabs-ext/src/background/: index.ts
tabs-ext/src/newtab/: App.tsx  index.html  index.tsx
tabs-ext/src/newtab/components/: Header.tsx
tabs-ext/src/options/: App.tsx  index.html
tabs-ext/src/popup/: App.tsx  index.html
tabs-ext/src/popup/components/: QuickActions.tsx  RecentTabs.tsx  SaveTabForm.tsx
tabs-ext/src/shared/api/: auth.ts  client.ts
tabs-ext/src/shared/constants/: api.ts  storage-keys.ts
tabs-ext/src/shared/stores/: auth-store.ts  collection-store.ts  space-store.ts  tab-store.ts
tabs-ext/src/shared/types/: auth.ts  collection.ts  index.ts  space.ts  tab.ts
tabs-ext/src/shared/utils/: date.ts  signature.ts  uuid.ts
tabs-ext/src/styles/: globals.css
(+16 files in other folders)
