[project]
name = "open-tabs"
version = "0.0.1"
description = "Open Tabs In Any Computer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.115.14",
    "jupyter>=1.1.1",
    "openai>=2.8.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.8.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tabapi"]

[project.scripts]
tabapi = "tabapi.scripts:app"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "gitlint>=0.19.1",
    "ruff>=0.8.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "freezegun>=1.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short", "-ra"]
markers = [
    "unit: Unit tests (no DB, fast)",
    "integration: Integration tests (with DB)",
    "api: API/E2E tests (full stack)",
]
filterwarnings = [
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["tabapi"]
branch = true
omit = ["*/tests/*", "*/__init__.py", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

